Set up roles and redirect on login

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <title>Staff Portal: Login</title>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/login.css">
 
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
 
